fixing booking date validation + some small improvements: - Updating a booking was not passing the hints to the newBookingFormSchema so it was not validating the date/time correctly - Fixing user dropdown overflow of email - Fixing user dropdown menu buttons sizing - Making the supportBanner close with optimistic ui - Fixing some stylings in calendar: focus & selected state for events + min height of dates

--- a/app/styles/layout/calendar.css
+++ b/app/styles/layout/calendar.css
@@ -50,5 +50,11 @@
 }
 
 .fc-daygrid-day-frame {
-  @apply min-h-[200px] !important;
+  @apply min-h-[130px] !important;
+}
+
+/** Make sure that the background doesn't become gray on focus */
+.fc-event-selected::after,
+.fc-event:focus::after {
+  @apply bg-transparent !important;
 }
